force-app/main/default/objects/Marketing_Account__c/Marketing_Account__c.object-meta.xml
<CustomObject>
    <label>Marketing Account</label>
    <nameField>
        <label>Marketing Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>