force-app/main/default/objects/Marketing_Account__c/fields/bBICostAppr__c.field-meta.xml
<CustomField>
    <fullName>bBICostAppr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BI Cost Approx.</label>
    <type>Checkbox</type>
</CustomField>