force-app/main/default/objects/Marketing_Account__c/fields/curFixedCPC__c.field-meta.xml
<CustomField>
    <fullName>curFixedCPC__c</fullName>
    <label>Fixed CPC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>