force-app/main/default/objects/Marketing_Account__c/fields/curMonthlyBudgetCapacity__c.field-meta.xml
<CustomField>
    <fullName>curMonthlyBudgetCapacity__c</fullName>
    <label>Monthly Budget Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>