force-app/main/default/objects/Marketing_Account__c/fields/plAutoBidding__c.field-meta.xml
<CustomField>
    <fullName>plAutoBidding__c</fullName>
    <label>Auto Bidding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed CPC</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>WIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>