force-app/main/default/objects/Marketing_Account__c/fields/plAutoCostImport__c.field-meta.xml
<CustomField>
    <fullName>plAutoCostImport__c</fullName>
    <label>Auto Cost Import</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>