force-app/main/default/objects/Marketing_Account__c/fields/plPaymentType__c.field-meta.xml
<CustomField>
    <fullName>plPaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto CC</fullName>
            </value>
            <value>
                <fullName>Manual CC</fullName>
            </value>
            <value>
                <fullName>Auto Wire</fullName>
            </value>
            <value>
                <fullName>Manual Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>