force-app/main/default/objects/Marketing_Account__c/fields/plStatus__c.field-meta.xml
<CustomField>
    <fullName>plStatus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>active</fullName>
                <default>true</default>
                <label>active</label>
            </value>
            <value>
                <fullName>inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>