force-app/main/default/objects/Marketing_Account__c/fields/refContact__c.field-meta.xml
<CustomField>
    <fullName>refContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Contact</label>
    <referenceTo>Marketing_Contact__c</referenceTo>
    <relationshipLabel>Marketing Accounts</relationshipLabel>
    <relationshipName>Marketing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>