force-app/main/default/objects/Marketing_Account__c/fields/txtDashboardEmail__c.field-meta.xml
<CustomField>
    <fullName>txtDashboardEmail__c</fullName>
    <label>Dashboard Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>