force-app/main/default/objects/Marketing_Account__c/fields/txtDashboardPW__c.field-meta.xml
<CustomField>
    <fullName>txtDashboardPW__c</fullName>
    <label>Dashboard PW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>