force-app/main/default/objects/Marketing_Account__c/fields/txtVATInfo__c.field-meta.xml
<CustomField>
    <fullName>txtVATInfo__c</fullName>
    <label>VAT Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>