force-app/main/default/objects/Marketing_Account__c/fields/txtXMLName__c.field-meta.xml
<CustomField>
    <fullName>txtXMLName__c</fullName>
    <label>XML Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>