force-app/main/default/objects/Marketing_Account__c/fields/txtXMLPW__c.field-meta.xml
<CustomField>
    <fullName>txtXMLPW__c</fullName>
    <label>XML PW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>