force-app/main/default/objects/Marketing_Account__c/fields/txtZahlungsziel__c.field-meta.xml
<CustomField>
    <fullName>txtZahlungsziel__c</fullName>
    <label>Zahlungsziel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>