force-app/main/default/objects/Marketing_Account__c/fields/urlDashboardLink__c.field-meta.xml
<CustomField>
    <fullName>urlDashboardLink__c</fullName>
    <label>Dashboard Link</label>
    <type>Url</type>
</CustomField>