force-app/main/default/objects/Marketing_Account__c/fields/urlXMLFeedLink__c.field-meta.xml
<CustomField>
    <fullName>urlXMLFeedLink__c</fullName>
    <label>XML Feed Link</label>
    <type>Url</type>
</CustomField>